# z4j-flask

./: CHANGELOG-1.x-legacy.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/z4j_flask/: __init__.py  __main__.py  cli.py  config.py  declarative.py  extension.py  framework.py
tests/unit/: test_build_config.py  test_declarative.py  test_engine_discovery.py
