[project]
name = "z4j-flask"
version = "1.0.1"
description = "z4j Flask framework adapter (Apache 2.0) - Phase 1.1"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "z4j-core",
    "z4j-bare",
    "flask>=3.1.3",
]

[project.optional-dependencies]
celery = ["z4j-celery"]
celerybeat = ["z4j-celery", "z4j-celerybeat"]

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-flask/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-flask/issues"
Source = "https://github.com/z4jdev/z4j-flask"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_flask"]
